doing intelliJ suggested changes (a lot has changed since java 6 and there's new recommended ways of doing stuff)