@@ -21,17 +21,14 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Key;
 import com.intellij.plugins.haxe.config.HaxeProjectSettings;
 import com.intellij.plugins.haxe.lang.parser.HaxeAstFactory;
-
 import com.intellij.psi.tree.IElementType;
 import com.intellij.util.containers.Stack;
 import gnu.trove.THashSet;
 import lombok.CustomLog;
-
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -198,7 +195,7 @@ public class HaxeConditionalExpression {
    */
 
   /** Defines that we want in place if there is no Project context. */
-  private final static Set<String> SDK_DEFINES = new THashSet<String>(Arrays.asList(
+  private final static Set<String> SDK_DEFINES = new THashSet<String>(List.of(
     "macro"
   ));
   /** Used for setting defines in the test bed. */
